--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "antd": "^3.1.3",
+    "node-sass": "^4.7.2",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "sass-loader": "^6.0.6"
   },
   "scripts": {
     "start": "react-app-rewired start --scripts-version react-scripts-ts",
